Fixed alignment misstake on GUI

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -186,7 +186,7 @@
 	-fx-background-insets: 0;
 }
 
-.button, .toggle-button, .split-menu-button, .text-field, .combo-box .check-box{
+.button, .toggle-button, .split-menu-button, .text-field, .combo-box, .check-box{
 	-fx-background-radius: 0px;
 	-fx-background-insets: 0px 0px 0px 0px, 0px, 1px, 1px;
 }
